fix(table): column width on large screens on Firefox

--- a/packages/components/src/table/src/components/osds-table/osds-table.scss
+++ b/packages/components/src/table/src/components/osds-table/osds-table.scss
@@ -78,7 +78,7 @@
         tr {
           th,
           td {
-            min-width: 100%;
+            min-width: auto;
           }
         }
       }
